test/classes/bradc/weirdinit.good
Error: Unresolved call ':pair()' (weirdinit.chpl:7)
